[package]
name = "ridup"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
sha2 = "0.11"
ureq = { version = "3.3", features = ["json"] }
zip = { version = "6", default-features = false, features = ["deflate"] }
